--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ollamarestapi
 spring.ai.ollama.chat.model=mistral
 
-weather.apiKey=df7f5a04668a4a88b9a73836240108
+weather.apiKey=YOUR_API_KEY
 weather.apiUrl=https://api.weatherapi.com/v1
